<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MovieActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/movieShowtimes"
        android:layout_width="302dp"
        android:layout_height="37dp"
        android:layout_marginTop="40dp"
        android:text="@string/broswe_the_showtime"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cinema1"
        android:layout_width="340dp"
        android:layout_height="29dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/events_cinemas_parramatta"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.128"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieShowtimes" />

    <TextView
        android:id="@+id/cinema2"
        android:layout_width="340dp"
        android:layout_height="29dp"
        android:text="@string/reading_cinemas_auburn"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="216dp" />

    <TextView
        android:id="@+id/cinema4"
        android:layout_width="340dp"
        android:layout_height="29dp"
        android:text="@string/hyotts_penrith"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="341dp" />

    <Button
        android:id="@+id/timeB"
        android:layout_width="91dp"
        android:layout_height="42dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginBottom="36dp"
        android:text="@string/_11_30_am"
        app:layout_constraintBottom_toTopOf="@+id/cinema2"
        app:layout_constraintStart_toEndOf="@+id/timeA" />

    <Button
        android:id="@+id/timeA"
        android:layout_width="77dp"
        android:layout_height="41dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginBottom="36dp"
        android:text="@string/_8_30_am"
        app:layout_constraintBottom_toTopOf="@+id/cinema2"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/timeC"
        android:layout_width="85dp"
        android:layout_height="40dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginBottom="36dp"
        android:text="@string/_3_00_pm"
        app:layout_constraintBottom_toTopOf="@+id/cinema2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toEndOf="@+id/timeB" />

    <Button
        android:id="@+id/timeD"
        android:layout_width="87dp"
        android:layout_height="40dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:text="@string/_11_00_am"
        app:layout_constraintBottom_toTopOf="@+id/cinema4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cinema2"
        app:layout_constraintVertical_bias="0.25" />

    <Button
        android:id="@+id/timeE"
        android:layout_width="79dp"
        android:layout_height="38dp"
        android:text="@string/_1_30_pm"
        app:layout_constraintBottom_toTopOf="@+id/cinema4"
        app:layout_constraintEnd_toStartOf="@+id/timeF"
        app:layout_constraintHorizontal_bias="0.616"
        app:layout_constraintStart_toEndOf="@+id/timeD"
        app:layout_constraintTop_toBottomOf="@+id/cinema2"
        app:layout_constraintVertical_bias="0.241" />

    <Button
        android:id="@+id/timeF"
        android:layout_width="79dp"
        android:layout_height="38dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/_7_30_pm"
        app:layout_constraintBottom_toTopOf="@+id/cinema4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cinema2"
        app:layout_constraintVertical_bias="0.241" />

    <Button
        android:id="@+id/timeG"
        android:layout_width="88dp"
        android:layout_height="41dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:text="@string/_10_00_am"
        app:layout_constraintBottom_toBottomOf="@+id/timeH"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cinema4"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/timeI"
        android:layout_width="79dp"
        android:layout_height="38dp"
        android:layout_marginTop="28dp"
        android:text="@string/_5_30_pm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toEndOf="@+id/timeH"
        app:layout_constraintTop_toBottomOf="@+id/cinema4" />

    <Button
        android:id="@+id/timeH"
        android:layout_width="79dp"
        android:layout_height="38dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:text="@string/_2_00_pm"
        app:layout_constraintBottom_toBottomOf="@+id/timeI"
        app:layout_constraintStart_toEndOf="@+id/timeG"
        app:layout_constraintTop_toBottomOf="@+id/cinema4"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/returnToHome"
        android:layout_width="156dp"
        android:layout_height="48dp"
        android:layout_marginBottom="36dp"
        android:text="@string/return_to_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeG" />

</androidx.constraintlayout.widget.ConstraintLayout>